# squidGuard

./: ANNOUNCE  CHANGELOG  CONFIGURATION  COPYING  FAQ  INSTALL  ISSUES.txt  Makefile.in  README  README.LDAP  README.QuotedStrings  README.old  autogen.sh  configure  configure-old  configure.in
contrib/: Makefile.in
contrib/hostbyname/: hostbyname.in
contrib/sgclean/: sgclean  sgclean.in
contrib/squidGuardRobot/: RobotUserAgent.pm  squidGuardRobot.in
doc/: LDAPFlow.txt  README  authentication.html  authentication.txt  configuration.html  configuration.txt  configure.html  configure.txt  expressionlist.html  expressionlist.txt  extended.html  extended.txt  faq.html  faq.txt  features.html  features.txt  index.html  install.html  install.txt  installation.html  installation.txt  ldap-ad-tips.html  ldap-ad-tips.txt  ldap.html  ldap.txt  runtimeops.html  runtimeops.txt  troubleshoot.html  troubleshoot.txt
samples/: Makefile.in  sample.conf.in  squidGuard-simple-de.cgi.in  squidGuard-simple.cgi.in  squidGuard.cgi.in
samples/dest/: README  README,D
samples/dest/financial/: domainlist
src/: HTEscape.h  HTParse.c  Makefile.in  config.h.in  lex.yy.c.flex  main.c  main.c.in  sg.h  sg.h.in  sg.l  sg.y  sg.y.in  sgAccessList.c  sgAccessList.h  sgDNSBL.c  sgDNSBL.h  sgDb.c  sgDb.h  sgDestList.c  sgDestList.h  sgDiv.c  sgDiv.c.in  sgDomainList.c  sgDomainList.h  sgEscape.c  sgEx.h  sgFree.c  sgGroup.c  sgGroup.h  sgLDAP.c  sgLDAP.h  sgLog.c  sgLog.c.in  sgLog.h  sgMatch.c  sgMatch.h  sgMemory.c  sgMemory.h  sgNetGroup.c  sgNetGroup.h  (+30 more)
src/patricia/: README  patricia.c  patricia.h
test/: Makefile.in  requests  test1.conf.in  test1.expected  test2.conf.in  test2.expected
test/blacklist/: domains  expressions  urls
